fix overflow

--- a/src/app/shared/components/token-amount-estimated/token-amount-estimated.component.scss
+++ b/src/app/shared/components/token-amount-estimated/token-amount-estimated.component.scss
@@ -2,6 +2,8 @@
 @import 'src/scss/mixins';
 
 :host {
+  overflow: hidden;
+
   @include iframe-horizontal {
     width: 100%;
   }
